# sealed-stellar-zk

./: .gitignore  LICENSE  README.md
cdm-guest/: Cargo.toml  proof.txt
cdm-guest/data/: avg.json  count.json  sample.csv  sum.json  weighted_sum.json
cdm-guest/host/: Cargo.toml
cdm-guest/host/src/: main.rs
cdm-guest/methods/guest/: Cargo.toml
cdm-guest/methods/guest/src/: main.rs
cdm-guest/proverlib/: Cargo.toml
cdm-guest/proverlib/src/: lib.rs
contracts/: Cargo.toml
contracts/cdm-shared/: Cargo.toml
contracts/cdm-shared/src/: agg.rs  lib.rs  vm.rs
contracts/dataset-registry/: Cargo.toml
contracts/dataset-registry/src/: lib.rs  test.rs
contracts/dataset-registry/test_snapshots/test/: ids_increment.1.json  register_then_get.1.json  rejects_zero_rows.1.json
contracts/job-manager/: Cargo.toml
contracts/job-manager/fixtures/: count_proof.txt  sum_proof.txt
contracts/job-manager/src/: lib.rs  registry.rs  test.rs
contracts/job-manager/test_snapshots/test/: cooldown_blocks_rapid_requests.1.json  fulfill_happy_path.1.json  fulfill_rejects_query_param_mismatch.1.json  fulfill_rejects_tampered_journal.1.json  fulfill_rejects_wrong_dataset_root.1.json  fulfill_rejects_wrong_image_id.1.json  fulfill_rejects_wrong_request_id.1.json  fulfill_requires_accepted.1.json  fulfill_sum_happy_path.1.json  get_request_count_tracks_submissions.1.json  submit_accepts_weighted_sum_correct_len.1.json  submit_rejects_weight_over_u16.1.json  submit_request_bumps_instance_ttl.1.json
demo/: ds4_age_balance.csv  ds4_age_balance_labeled.csv  ds4_count_age_gt30_proof.json
derisk/cdm-guest/: proof.txt
derisk/cdm-guest/host/: Cargo.toml
derisk/cdm-guest/host/src/: main.rs
derisk/cdm-guest/methods/guest/: Cargo.toml
derisk/cdm-guest/methods/guest/src/: main.rs
derisk/stellar-risc0-verifier/: VENDORED.md  deployment.toml
docker/: Dockerfile
docs/: DEMO_SCRIPT.md  DERISK_NOTES.md  ENGINE.md  HACKATHON_SPEC.md  HOSTING.md  TESTNET_DEPLOYMENT.md
frontend/: .gitignore  package-lock.json  package.json  vercel.json
frontend/scripts/: verify-register.mjs
prover-service/: server.mjs
scripts/: redeploy.sh
(+1 files in other folders)
