[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
cdm-shared = { path = "../../contracts/cdm-shared" }
proverlib = { path = "../proverlib" }
risc0-zkvm = { version = "^3.0.5" }
risc0-ethereum-contracts = "^3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
