[package]
name = "proverlib"
version = "0.1.0"
edition = "2021"

# Pure parsing/wiring for the prover CLI. Depends ONLY on cdm-shared (no risc0/methods) so these
# tests run in milliseconds without building the guest ELF.
[dependencies]
cdm-shared = { path = "../../contracts/cdm-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
